<resources>
    <string name="app_name">lesson13 Registration</string>
    <string name="action_settings">Settings</string>
    <string name="active_users">Active Users:</string>
    <string name="KEY_USERS">users key</string>
    <string name="title_activity_user_details">UserDetails</string>
    <string name="KEY_USERDETAILS">user details key</string>
    <string name="KEY_FNAME">first name</string>
    <string name="KEY_LNAME">user last name</string>
    <string name="KEY_ADDRESS">user address</string>
    <string name="KEY_EMAIL">user email</string>
    <string name="KEY_ID">user ID</string>
    <string name="KEY_PHONE">user phone</string>
    <string name="user_details">User Details:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="full_name">Full Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="id">ID:</string>
    <string name="KEY_POSITION">array position</string>
    <integer name="RESULT_DELETE">2020</integer>
    <string name="title_activity_edit_user">EditUser</string>
    <string name="edit_user">Edit user:</string>
    <string name="title_activity_new_user">New User</string>
    <string name="new_user">New User</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="password">Password:</string>
</resources>
